[package]
edition = "2021"
name = "bonsai-trie"
version = "0.1.0"

[features]
default = ["std", "rocksdb"]
rocksdb = ["dep:rocksdb"]
std = ["parity-scale-codec/std", "bitvec/std", "starknet-types-core/std"]

[dependencies]
bitvec = { version = "1", default-features = false, features = ["alloc"] }
derive_more = { version = "0.99.17", default-features = false, features = [
    "constructor",
] }
hashbrown = "0.14.3"
log = "0.4.20"
smallvec = "1.11.2"
rayon = "1.9.0"

parity-scale-codec = { version = "3.0.0", default-features = false, features = [
    "derive",
] }
serde = { version = "1.0.195", default-features = false, features = [
    "derive",
    "alloc",
] }
starknet-types-core = { version = "0.0.7", default-features = false, features = [
    "hash",
    "parity-scale-codec",
] }

# Optionals
rocksdb = { optional = true, version = "0.21.0", features = [
    "multi-threaded-cf",
] }

[dev-dependencies]
pathfinder-common = { git = "https://github.com/massalabs/pathfinder.git", package = "pathfinder-common", rev = "b7b6d76a76ab0e10f92e5f84ce099b5f727cb4db" }
pathfinder-crypto = { git = "https://github.com/massalabs/pathfinder.git", package = "pathfinder-crypto", rev = "b7b6d76a76ab0e10f92e5f84ce099b5f727cb4db" }
pathfinder-merkle-tree = { git = "https://github.com/massalabs/pathfinder.git", package = "pathfinder-merkle-tree", rev = "b7b6d76a76ab0e10f92e5f84ce099b5f727cb4db" }
pathfinder-storage = { git = "https://github.com/massalabs/pathfinder.git", package = "pathfinder-storage", rev = "b7b6d76a76ab0e10f92e5f84ce099b5f727cb4db" }
rand = "0.8.5"
tempfile = "3.8.0"
rstest = "0.18.2"
